# edge-firmware

./: Smart_Glasses_Firmware_Guide.docx
.github/workflows/: build-firmware.yml
OTA/: OTA_GUIDE_v4.2.md  OTA_UPDATE_GUIDE.md  main.c
Original/: README_V1_Original_Firmware.md
v4/Code-Glasses/: CMakeLists.txt  partitions_ota.csv  sdkconfig  sdkconfig (1)  sdkconfig (1).txt  sdkconfig.defaults
v4/Code-Glasses/components/narbis_ble_central/: CMakeLists.txt  narbis_ble_central.c
v4/Code-Glasses/components/narbis_ble_central/include/: narbis_ble_central.h
v4/Code-Glasses/components/narbis_protocol/: CMakeLists.txt  narbis_protocol.c  narbis_protocol.h
v4/Code-Glasses/main/: CMakeLists.txt  main (12).c  main (16).c  main (4).c  main (9).c  main.c  main_demo (2).c  main_demo (3).c  main_demo.c  main_v4.2.c  main_v4.3.c  main_v4.5.c  main_v4_12_1.c  main_v4_12_3.c  main_v4_12_7.c  main_v4_13_1.c  main_v4_13_2.c  main_v4_13_7.c  main_v4_14_12.c  main_v4_14_13.c  main_v4_14_15.c  main_v4_14_16.c  main_v4_14_17.c  main_v4_14_18.c  main_v4_14_19.c  main_v4_14_2.c  main_v4_14_21.c  main_v4_14_22.c  main_v4_14_26.c  main_v4_14_27.c  main_v4_14_29.c  main_v4_14_3.c  main_v4_14_34.c  main_v4_14_36.c  main_v4_14_38.c  main_v4_14_5.c  main_v4_14_7.c  main_v4_14_8.c
v4/Code-Glasses/main/src/: led.c
